@@ -13,6 +13,8 @@ import (
 // DockerJSON processor renames a given field
 type DockerJSON struct {
 	reader Reader
+	// stream filter, `all`, `stderr` or `stdout`
+	stream string
 }
 
 type dockerLog struct {
@@ -22,33 +24,42 @@ type dockerLog struct {
 }
 
 // NewDockerJSON creates a new reader renaming a field
-func NewDockerJSON(r Reader) *DockerJSON {
-	return &DockerJSON{reader: r}
+func NewDockerJSON(r Reader, stream string) *DockerJSON {
+	return &DockerJSON{
+		stream: stream,
+		reader: r,
+	}
 }
 
 // Next returns the next line.
 func (p *DockerJSON) Next() (Message, error) {
-	message, err := p.reader.Next()
-	if err != nil {
-		return message, err
-	}
+	for {
+		message, err := p.reader.Next()
+		if err != nil {
+			return message, err
+		}
 
-	var line dockerLog
-	dec := json.NewDecoder(bytes.NewReader(message.Content))
-	if err = dec.Decode(&line); err != nil {
-		return message, errors.Wrap(err, "decoding docker JSON")
-	}
+		var line dockerLog
+		dec := json.NewDecoder(bytes.NewReader(message.Content))
+		if err = dec.Decode(&line); err != nil {
+			return message, errors.Wrap(err, "decoding docker JSON")
+		}
 
-	// Parse timestamp
-	ts, err := time.Parse(time.RFC3339, line.Timestamp)
-	if err != nil {
-		return message, errors.Wrap(err, "parsing docker timestamp")
-	}
+		if p.stream != "all" && p.stream != line.Stream {
+			continue
+		}
 
-	message.AddFields(common.MapStr{
-		"stream": line.Stream,
-	})
-	message.Content = []byte(line.Log)
-	message.Ts = ts
-	return message, nil
+		// Parse timestamp
+		ts, err := time.Parse(time.RFC3339, line.Timestamp)
+		if err != nil {
+			return message, errors.Wrap(err, "parsing docker timestamp")
+		}
+
+		message.AddFields(common.MapStr{
+			"stream": line.Stream,
+		})
+		message.Content = []byte(line.Log)
+		message.Ts = ts
+		return message, nil
+	}
 }
