@@ -2,8 +2,9 @@ package docker
 
 var defaultConfig = config{
 	Containers: containers{
-		IDs:  []string{},
-		Path: "/var/lib/docker/containers",
+		IDs:    []string{},
+		Path:   "/var/lib/docker/containers",
+		Stream: "all",
 	},
 }
 
@@ -14,4 +15,7 @@ type config struct {
 type containers struct {
 	IDs  []string `config:"ids"`
 	Path string   `config:"path"`
+
+	// Stream can be all,stdout or stderr
+	Stream string `config:"stream"`
 }
